--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
             <button id="listen"><i class='bx bx-play'></i>Listen</button>
         </div>
     </div>
+
+    <footer id="foot">
+        <h2>Copyright © 2023 Datta. All rights reserved | Designed by Datta</h2>
+    </footer>
+
     <script src="index.js"></script>
 </body>
-
 </html>
 
 <!-- Code By - Kale Datta  -->
