--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="hero">
+        <h2>SpeakEasy.</h2>
         <h1>Text To Speech <span>Converter</span></h1>
         <textarea placeholder="Write anything here...."></textarea>
         <div class="row">
@@ -18,7 +19,7 @@
             <button id="listen"><i class='bx bx-play'></i>Listen</button>
         </div>
     </div>
-
+    
     <footer id="foot">
         <h2>Copyright © 2023 Datta. All rights reserved | Designed by Datta</h2>
     </footer>
